// proto/razpravljalnica.proto
syntax = "proto3";

package razpravljalnica;

option go_package = "/razpravljalnica";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

////////////////////////////////////////////////////////////////////////////////
// Basic data types
////////////////////////////////////////////////////////////////////////////////

message User {
  int64 id = 1;
  string name = 2;
  string password_hash = 3;
  string salt = 4;
}

message Topic {
  int64 id = 1;
  string name = 2;
}

message Message {
  int64 id = 1;
  int64 topic_id = 2;
  int64 user_id = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
  string topic_name = 6;
  int32 likes = 7;
  bool is_liked = 8;
}

message Like {
  int64 topic_id = 1;
  int64 message_id = 2;
  int64 user_id = 3;
}

enum OpType {
  OP_POST = 0;
  OP_LIKE = 1;
  OP_UNLIKE = 2;
}

message NodeInfo {
  string node_id = 1;
  string address = 2;
}

////////////////////////////////////////////////////////////////////////////////
// Data plane
////////////////////////////////////////////////////////////////////////////////

service MessageBoard {
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc Login(LoginRequest) returns (User);
  rpc GetUser(GetUserRequest) returns (User);
  rpc GetUserById(GetUserByIdRequest) returns (User);
  rpc CreateTopic(CreateTopicRequest) returns (Topic);
  rpc GetTopic(GetTopicRequest) returns (Topic);
  rpc PostMessage(PostMessageRequest) returns (Message);
  rpc LikeMessage(LikeMessageRequest) returns (Message);
  rpc GetSubscriptionNode(SubscriptionNodeRequest) returns (SubscriptionNodeResponse);
  rpc ListTopics(ListTopicsRequest) returns (ListTopicsResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
  rpc GetMessagesByUser(GetMessagesByUserRequest) returns (GetMessagesResponse);
  rpc SubscribeTopic(SubscribeTopicRequest) returns (stream MessageEvent);
  rpc JoinTopic(JoinTopicRequest) returns (google.protobuf.Empty);
  rpc ListAllTopics(google.protobuf.Empty) returns (ListTopicsResponse);
  rpc ListJoinableTopics(ListJoinableTopicsRequest) returns (ListTopicsResponse);
}

message CreateUserRequest {
  string name = 1;
  string password = 2;
  string salt = 3;
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message GetUserRequest {
  string name = 1;
}

message GetUserByIdRequest {
  int64 id = 1;
}

message CreateTopicRequest {
  string name = 1;
  int64 user_id = 2;
}

message GetTopicRequest {
  string name = 1;
}

message PostMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  string text = 3;
}

message LikeMessageRequest {
  int64 topic_id = 1;
  int64 message_id = 2;
  int64 user_id = 3;
  bool like = 4; // true = like, false = unlike
}

message ListTopicsRequest {
  int64 user_id = 1;
}

message ListJoinableTopicsRequest {
  int64 user_id = 1;
}

message ListTopicsResponse {
  repeated Topic topics = 1;
}

message GetMessagesRequest {
  int64 topic_id = 1;
  int64 from_message_id = 2;
  int32 limit = 3;
  int64 request_user_id = 4;
}

message GetMessagesByUserRequest {
  int64 topic_id = 1;
  string user_name = 2;
  int32 limit = 3;
  int64 request_user_id = 4;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message SubscribeTopicRequest {
  repeated int64 topic_id = 1;
  int64 user_id = 2;
  int64 from_message_id = 3;
  string subscribe_token = 4;
}

message SubscriptionNodeRequest {
  int64 user_id = 1;
  repeated int64 topic_id = 2;
}

message SubscriptionNodeResponse {
  string subscribe_token = 1;
  NodeInfo node = 2;
}

message MessageEvent {
  int64 sequence_number = 1;
  OpType op = 2;
  Message message = 3;
  google.protobuf.Timestamp event_at = 4;
  int64 liker_id = 5;
}

message JoinTopicRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
}

////////////////////////////////////////////////////////////////////////////////
// Control plane
////////////////////////////////////////////////////////////////////////////////

service ControlPlane {
  rpc GetClusterState(google.protobuf.Empty) returns (GetClusterStateResponse);
  rpc RegisterNode(RegisterNodeRequest) returns (google.protobuf.Empty);
  rpc Heartbeat(HeartbeatRequest) returns (google.protobuf.Empty);
  rpc GetChainState(google.protobuf.Empty) returns (ChainStateResponse);
  rpc ConfirmSynced(ConfirmSyncedRequest) returns (google.protobuf.Empty);
}

message ConfirmSyncedRequest {
  string node_id = 1;
}

message GetClusterStateResponse {
  NodeInfo head = 1;
  NodeInfo tail = 2;
}

message RegisterNodeRequest {
  string node_id = 1;
  string address = 2;
}

message HeartbeatRequest {
  string node_id = 1;
}

message ChainStateResponse {
  repeated NodeInfo chain = 1;
}

////////////////////////////////////////////////////////////////////////////////
// Inter-node replication
////////////////////////////////////////////////////////////////////////////////

service Replication {
  rpc ReplicateWrite(ReplicationRequest) returns (google.protobuf.Empty);
  rpc StreamLog(StreamLogRequest) returns (stream WriteOp);
  rpc NotifyEvent(MessageEvent) returns (google.protobuf.Empty);
  rpc AcknowledgeWrite(AcknowledgeRequest) returns (google.protobuf.Empty);
  rpc GetLastAcked(google.protobuf.Empty) returns (GetLastAckedResponse);
}

message StreamLogRequest {
  int64 from_sequence = 1;
}

message ReplicationRequest {
  WriteOp op = 1;
}

message WriteOp {
  oneof operation {
    CreateUserRequest create_user = 1;
    CreateTopicRequest create_topic = 2;
    PostMessageRequest post_message = 3;
    LikeMessageRequest like_message = 4;
    JoinTopicRequest join_topic = 5;
  }
  int64 sequence = 6;
}

message AcknowledgeRequest {
  int64 sequence = 1;
}

message GetLastAckedResponse {
  int64 sequence = 1;
}
